--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 body {
     background-color: white;
-    background-image: url("../images/pixels3.jpg");
+    /* background-image: url("../images/pixels3.jpg"); */
     background-repeat: repeat;
     /* repeat, no-repeat */
     background-attachment: fixed;
