--- a/css/index.css
+++ b/css/index.css
@@ -27,6 +27,10 @@ body {
     /* left, right, center, justify */
 }
 
+.text-white {
+    color: white;
+}
+
 .fancy {
     min-height: 150px;
     padding: 20px;
@@ -39,7 +43,7 @@ body {
     /* really nifty translucence */
     /* background: -moz-linear-gradient(top, rgba(255, 255, 255, 0.8), rgba(200, 200, 200, 0.8)); */
     /* background: -webkit-gradient(linear, 0% 0%, 0% 100%, from( rgba(255, 255, 255, 0.8)), to( rgba(200, 200, 200, 0.8))); */
-    background: rgb(130, 181, 186);
+    background: #141417;
     /* background: linear-gradient(0deg, rgba(130, 181, 186, 1) 0%, rgba(255, 255, 255, 1) 100%); */
     /* Rounded corners */
     /* -moz-border-radius: 15px 15px 15px 15px;
@@ -81,7 +85,7 @@ a:hover {
 }
 
 .superText {
-    color: #000;
+    color: #edf5e1;
     text-shadow: 1px 1px 0px #aaa;
 }
 
