--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ffffff;
+    background-color: #edf5e1;
     /* background-image: url("../images/pixels3.jpg"); */
     background-repeat: repeat;
     /* repeat, no-repeat */
