--- a/css/index.css
+++ b/css/index.css
@@ -92,7 +92,7 @@ a:hover {
 a .superImage {
     height: 150px;
     width: 225px;
-    border: 1px solid #000000;
+    border: 1px solid #ffffff;
     margin: 0px 20px 0px 0px;
     float: left;
     /* Rounded corners */
@@ -110,18 +110,18 @@ a .superImage {
 a:hover .superImage {
     top: -10px;
     /* fallback on standard opaque colors */
-    -moz-box-shadow: 10px 10px 5px #888;
-    -webkit-box-shadow: 10px 10px 5px #888;
-    box-shadow: 10px 10px 5px #888;
+    /* -moz-box-shadow: 10px 10px 5px #888; */
+    /* -webkit-box-shadow: 10px 10px 5px #888; */
+    /* box-shadow: 10px 10px 5px #888; */
     /* translucent: the way shadows should be */
-    -moz-box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
-    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5);
+    /* -moz-box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5); */
+    /* -webkit-box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5); */
+    box-shadow: 10px 10px 18px #555a61;
     -webkit-transition: all 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out;
     -o-transition: all 300ms ease-in-out;
     -ms-transition: all 300ms ease-in-out;
-    transition: all 300ms ease-in-out;
+    transition: all 200ms ease-in-out;
 }
 
 .bigTitle {
