--- a/css/index.css
+++ b/css/index.css
@@ -73,6 +73,13 @@ a {
     font-size: 15px;
 }
 
+
+/* .fbimg {
+    height: 150px;
+    width: 225px;
+    margin: auto;
+} */
+
 a:hover {
     color: #c00;
     /*text-shadow: 1px 1px 0px #f00;
@@ -116,7 +123,7 @@ a:hover .superImage {
     /* translucent: the way shadows should be */
     /* -moz-box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5); */
     /* -webkit-box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.5); */
-    box-shadow: 10px 10px 18px #555a61;
+    box-shadow: 10px 10px 18px #000000;
     -webkit-transition: all 300ms ease-in-out;
     -moz-transition: all 300ms ease-in-out;
     -o-transition: all 300ms ease-in-out;
@@ -127,7 +134,7 @@ a:hover .superImage {
 .bigTitle {
     font-size: 52px;
     font-weight: bold;
-    font-variantx: small-caps;
+    /* font-variantx: small-caps; */
     color: #004;
     text-align: center;
     text-shadow: -1px -1px 2px #fff, 1px 1px 3px #fff;
